fix: double scrollbar in settings page

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -148,6 +148,6 @@
     @apply border-border outline-ring/50;
   }
   body {
-    @apply bg-background text-foreground;
+    @apply bg-background text-foreground overflow-hidden;
   }
 }
